--- a/adminpanels/src/main/res/values/strings.xml
+++ b/adminpanels/src/main/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="data_menu">Data Menu</string>
     <string name="list_menu">List Menu</string>
     <string name="transaksi_pesanan">Transaksi Pesanan</string>
-    <string name="pesanan">Pesanan</string>
+    <string name="transaksi">Transaksi</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
