Desain Tampilan OK

--- a/adminpanels/src/main/res/values/strings.xml
+++ b/adminpanels/src/main/res/values/strings.xml
@@ -13,4 +13,21 @@
     <string name="transaksi">Transaksi</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="todo">TODO</string>
+    <string name="copyright_2020_nusalicious">Copyright 2020 Nusalicious</string>
+    <string name="nusalicious">Nusalicious</string>
+    <string name="register">Register</string>
+    <string name="register_1">REGISTER</string>
+    <string name="name">Name</string>
+    <string name="nama_paket">Nama Paket</string>
+    <string name="isi_menu">Isi menu</string>
+    <string name="harga">Harga</string>
+    <string name="minimal_order">Minimal Order</string>
+    <string name="keterangan">Keterangan</string>
+    <string name="choose_picture">Choose Picture</string>
+    <string name="save_data">Save Data</string>
+    <string name="loading">Loading. . .</string>
 </resources>
