--- a/adminpanels/src/main/res/values/strings.xml
+++ b/adminpanels/src/main/res/values/strings.xml
@@ -30,4 +30,6 @@
     <string name="choose_picture">Choose Picture</string>
     <string name="save_data">Save Data</string>
     <string name="loading">Loading. . .</string>
+    <string name="data_income">Data Income</string>
+    <string name="total_income">Total Income</string>
 </resources>
