--- a/adminpanels/src/main/res/values/strings.xml
+++ b/adminpanels/src/main/res/values/strings.xml
@@ -32,4 +32,9 @@
     <string name="loading">Loading. . .</string>
     <string name="data_income">Data Income</string>
     <string name="total_income">Total Income</string>
+    <string-array name="setStatus">
+        <item>Sedang disiapkan</item>
+        <item>Telah dikirim</item>
+        <item>Telah Selesai</item>
+    </string-array>
 </resources>
