--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,8 @@
     <string name="phone">Nomor Handphone</string>
     <string name="name">Nama Lengkap</string>
     <string name="register">DAFTAR AKUN</string>
-    <string name="welcome">SELAMAT DATANG\nDI\nNusa Licious</string>
-    <string name="logo">N</string>
+    <string name="welcome">SELAMAT DATANG</string>
+    <string name="logo">NL</string>
     <string name="rice_box">RiceBox</string>
     <string name="buffet">Prasmanan</string>
     <string name="office">Kantoran</string>
